{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 38,
  "lineage": "d408d02d-32ec-05c4-e09a-de38d9bd3f7f",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0871b7e0b83ae16c4",
            "arn": "arn:aws:ec2:us-east-1:654654274227:instance/i-00b54792a9dccc29b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00b54792a9dccc29b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "eks-project-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-040900050af8e92b4",
            "private_dns": "ip-10-0-23-132.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.23.132",
            "public_dns": "ec2-34-207-144-196.compute-1.amazonaws.com",
            "public_ip": "34.207.144.196",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02d944ff7cd042242",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-094aef753e76c4072",
            "tags": {
              "Cost": "dev-env",
              "Name": "dev-bastion",
              "Terraform": "true"
            },
            "tags_all": {
              "Cost": "dev-env",
              "Name": "dev-bastion",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03836cbd48c50734a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_security_group.dev-bastion-sg",
            "module.ec2.data.aws_ami.latest-amzn-linux-image",
            "module.vpc.aws_subnet.dev-pub-sub",
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev-bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654274227:security-group/sg-03836cbd48c50734a",
            "description": "Allow SSH access to bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03836cbd48c50734a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from allowed IPs",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-bastion-sg",
            "name_prefix": "",
            "owner_id": "654654274227",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cost": "dev-env",
              "Name": "dev-bastion-sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Cost": "dev-env",
              "Name": "dev-bastion-sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e191dec63d9f743a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654274227:security-group/sg-06286e3df84c571ce",
            "description": "Allow NFS from EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06286e3df84c571ce",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow NFS (port 2049) from worker nodes",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06deeae4f479abac1"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "dev-efs-sg",
            "name_prefix": "",
            "owner_id": "654654274227",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-efs-sg"
            },
            "tags_all": {
              "Name": "dev-efs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e191dec63d9f743a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.sg.aws_security_group.eks_nodes_sg",
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654274227:security-group/sg-06deeae4f479abac1",
            "description": "EKS worker nodes SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06deeae4f479abac1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow worker nodes to receive traffic from control plane",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "dev-nodes-sg",
            "name_prefix": "",
            "owner_id": "654654274227",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-nodes-sg"
            },
            "tags_all": {
              "Name": "dev-nodes-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e191dec63d9f743a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9a286a43bc8631b",
            "arn": "arn:aws:ec2:us-east-1:654654274227:elastic-ip/eipalloc-0d9a286a43bc8631b",
            "association_id": "eipassoc-0f9c9485526cba97d",
            "domain": "vpc",
            "id": "eipalloc-0d9a286a43bc8631b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08499ec61f3f542f2",
            "private_dns": "ip-10-0-31-65.ec2.internal",
            "private_ip": "10.0.31.65",
            "public_dns": "ec2-3-225-109-116.compute-1.amazonaws.com",
            "public_ip": "3.225.109.116",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654274227:internet-gateway/igw-058b20893b3f10409",
            "id": "igw-058b20893b3f10409",
            "owner_id": "654654274227",
            "region": "us-east-1",
            "tags": {
              "Cost": "dev-env",
              "Name": "dev-igw",
              "Terraform": "true"
            },
            "tags_all": {
              "Cost": "dev-env",
              "Name": "dev-igw",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e191dec63d9f743a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dev-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9a286a43bc8631b",
            "association_id": "eipassoc-0f9c9485526cba97d",
            "connectivity_type": "public",
            "id": "nat-0230cfe11db8860eb",
            "network_interface_id": "eni-08499ec61f3f542f2",
            "private_ip": "10.0.31.65",
            "public_ip": "3.225.109.116",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-094aef753e76c4072"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.eip_nat",
            "module.vpc.aws_subnet.dev-pub-sub",
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654274227:route-table/rtb-024c9230fa3cbc4eb",
            "id": "rtb-024c9230fa3cbc4eb",
            "owner_id": "654654274227",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-058b20893b3f10409",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e191dec63d9f743a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.dev-igw",
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-pvt-rt-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654274227:route-table/rtb-0381d5f7c1890bf09",
            "id": "rtb-0381d5f7c1890bf09",
            "owner_id": "654654274227",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0230cfe11db8860eb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e191dec63d9f743a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.eip_nat",
            "module.vpc.aws_nat_gateway.dev-nat",
            "module.vpc.aws_subnet.dev-pub-sub",
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-pvt-rt-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654274227:route-table/rtb-016fc1a729aae6680",
            "id": "rtb-016fc1a729aae6680",
            "owner_id": "654654274227",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0230cfe11db8860eb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e191dec63d9f743a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.eip_nat",
            "module.vpc.aws_nat_gateway.dev-nat",
            "module.vpc.aws_subnet.dev-pub-sub",
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-rt-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9f002eab49d4641",
            "region": "us-east-1",
            "route_table_id": "rtb-024c9230fa3cbc4eb",
            "subnet_id": "subnet-094aef753e76c4072"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.dev-igw",
            "module.vpc.aws_route_table.dev-pub-rt",
            "module.vpc.aws_subnet.dev-pub-sub",
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt-rt-ass-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3c1e6956153af78",
            "region": "us-east-1",
            "route_table_id": "rtb-0381d5f7c1890bf09",
            "subnet_id": "subnet-077a95b1c8c1fbcca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.eip_nat",
            "module.vpc.aws_nat_gateway.dev-nat",
            "module.vpc.aws_route_table.dev-pvt-rt-1",
            "module.vpc.aws_subnet.dev-pub-sub",
            "module.vpc.aws_subnet.dev-pvt-sub-1",
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt-rt-ass-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6f1dde7388ab85b",
            "region": "us-east-1",
            "route_table_id": "rtb-016fc1a729aae6680",
            "subnet_id": "subnet-0006f90ded1a36687"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.eip_nat",
            "module.vpc.aws_nat_gateway.dev-nat",
            "module.vpc.aws_route_table.dev-pvt-rt-2",
            "module.vpc.aws_subnet.dev-pub-sub",
            "module.vpc.aws_subnet.dev-pvt-sub-2",
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-pub-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654274227:subnet/subnet-094aef753e76c4072",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094aef753e76c4072",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654274227",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Cost": "dev-env",
              "Name": "dev-pub-sub",
              "Terraform": "true"
            },
            "tags_all": {
              "Cost": "dev-env",
              "Name": "dev-pub-sub",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e191dec63d9f743a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-pvt-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654274227:subnet/subnet-077a95b1c8c1fbcca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077a95b1c8c1fbcca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654274227",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Cost": "dev-env",
              "Name": "dev-pvt-sub-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Cost": "dev-env",
              "Name": "dev-pvt-sub-1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e191dec63d9f743a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-pvt-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654274227:subnet/subnet-0006f90ded1a36687",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0006f90ded1a36687",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654274227",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Cost": "dev-env",
              "Name": "dev-pvt-sub-2",
              "Terraform": "true"
            },
            "tags_all": {
              "Cost": "dev-env",
              "Name": "dev-pvt-sub-2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e191dec63d9f743a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654274227:vpc/vpc-0e191dec63d9f743a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c8b2d835a049b993",
            "default_route_table_id": "rtb-0a55259bf3d66fbea",
            "default_security_group_id": "sg-05c584d9338947767",
            "dhcp_options_id": "dopt-0b99028b80e724600",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e191dec63d9f743a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a55259bf3d66fbea",
            "owner_id": "654654274227",
            "region": "us-east-1",
            "tags": {
              "Cost": "dev-env",
              "Name": "dev-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Cost": "dev-env",
              "Name": "dev-vpc",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}